--- a/index.html
+++ b/index.html
@@ -1,40 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Practical-20</title>
-    <link rel="stylesheet" href="../bootstrap/css/bootstrap.min.css" />
-  </head>
-  <body>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <title>Fullstack Practical-20</title>
+    <style>
+        .row {
+            margin-bottom: 12px;
+        }
+    </style>
+</head>
+
+<body>
     <div class="container">
-      <div class="row p-3">
-        <div class="col-12" style="height: 20vh;background-color: blue;" ></div>
-      </div>
-      <div class="row p-3" >
-        <div
-          class="col-md-7"
-          style="height: 50vh;background-color: rgb(0, 255, 0);padding:20px"
-        ></div>
-        <div class="col-md-5" style=" height: 50vh;">
-          <div class="row ml-3">
-            <div
-              class="col-md-12 mb-5"
-              style="height: 22vh;background-color: rgb(255, 51, 0);padding:20px"
-            ></div>
-            <div
-              class="col-md-12"
-              style="height: 21vh;background-color: rgb(0, 174, 255);padding:20px"
-            ></div>
-          </div>
+        <div class="row">
+            <div class="col-12 bg-primary" style="height: 100px;"></div>
         </div>
-      </div>
-      <div class="row p-3">
-        <div
-          class="col-md-12"
-          style="height: 20vh;background-color: rgb(255, 187, 0);padding:20px"
-        ></div>
-      </div>
+        <div class="row">
+            <div class="col-6 bg-warning" style="height: 212px"></div>
+            <div class="col-6" style="height: 212px; padding-left:25px;">
+                <div class="row bg-danger" style="height: 100px;"></div>
+                <div class="row bg-success" style="height: 100px; margin-bottom: 0px;"></div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 bg-dark" style="height: 100px;"></div>
+        </div>
     </div>
-  </body>
+
+</body>
+
 </html>
